--- a/B-04 Binance接口学习.ipynb
+++ b/B-04 Binance接口学习.ipynb
@@ -41,8 +41,8 @@
    "outputs": [],
    "source": [
     "setting = {\n",
-    "        \"key\": \"jGdPOjC7CBYI9CHZRxQ5Txs0ln2yo1nbfEdNutvaS5ZgDNzTi3BqLJGmkTiGiMVQ\",\n",
-    "        \"secret\": \"X2OC0RucVGlHlUsW3gpLZ3Lo3TPnsZhofmqCL3VuuUdJMSaImQuHbwqo4Ih3Jq9g\",\n",
+    "        \"key\": \"\*",\n",
+    "        \"secret\": \"*\",\n",
     "        \"session_number\": 3,\n",
     "        \"proxy_host\": \"\",\n",
     "        \"proxy_port\": 0,\n",
@@ -732,8 +732,8 @@
     "\n",
     "\n",
     "setting = {\n",
-    "        \"key\": \"jGdPOjC7CBYI9CHZRxQ5Txs0ln2yo1nbfEdNutvaS5ZgDNzTi3BqLJGmkTiGiMVQ\",\n",
-    "        \"secret\": \"X2OC0RucVGlHlUsW3gpLZ3Lo3TPnsZhofmqCL3VuuUdJMSaImQuHbwqo4Ih3Jq9g\",\n",
+    "        \"key\": \"**\",\n",
+    "        \"secret\": \"**\",\n",
     "        \"session_number\": 3,\n",
     "        \"proxy_host\": \"\",\n",
     "        \"proxy_port\": 0,\n",
